--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -31,7 +31,7 @@ ul.nav {
   width: 100%;
   height: 50px;
   background-color: #e84a5f;
-  z-index: 0;
+  z-index: 1;
   border-bottom: 10px solid #ff847c;
   border-top: 10px solid #ff847c;
 }
@@ -43,7 +43,7 @@ ul.nav {
   width: 100%;
   height: 50px;
   background-color: #e84a5f;
-  z-index: 0;
+  z-index: 1;
   border-bottom: 10px solid #ff847c;
   border-top: 10px solid #ff847c;
 }
@@ -103,6 +103,7 @@ ul.nav {
   position: relative;
   top: 60;
   left: 0;
+  z-index: -1;
 }
 
 .nameBar {
@@ -140,7 +141,7 @@ ul.nav {
     background-image: 100% 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index:-1
+    // z-index: -1;
 }
 
 
@@ -154,6 +155,12 @@ ul.nav {
   list-style: none;
   text-shadow: 2px 2px black;
   display: inline-block;
+
+}
+
+.footer2 {
+  width: 40%;
+  text-align: center;
 }
 
 
